--- a/lecture37_docker/package.json
+++ b/lecture37_docker/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "lecture36_redis",
+  "name": "lecture37_docker",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start":"node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "axios": "^1.13.2",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "ioredis": "^5.8.2"
+    "express": "^5.1.0"
   }
 }
